@startuml

title __FROMFILE's Class Diagram__\n

  namespace com.kanzu.flibook {
    namespace ui.fromfile {
      class com.kanzu.flibook.ui.fromfile.FromFileFragment {
          ~ addButton : Button
          ~ editName : EditText
          ~ file : File
          ~ fileButton : Button
          ~ fileLoaded : boolean
          ~ isFb2 : boolean
          ~ isPdf : boolean
          ~ loadSuccess : TextView
          ~ path : TextView
          ~ typeError : TextView
          {static} + convertFile()
          + getFile()
          + onCreateView()
          + onDestroyView()
      }
    }
  }
  

  namespace com.kanzu.flibook {
    namespace ui.fromfile {
      class com.kanzu.flibook.ui.fromfile.FromFileViewModel {
      }
    }
  }
  

  com.kanzu.flibook.ui.fromfile.FromFileFragment -up-|> androidx.fragment.app.Fragment
  com.kanzu.flibook.ui.fromfile.FromFileFragment o-- com.kanzu.flibook.databinding.FragmentFromfileBinding : binding
  com.kanzu.flibook.ui.fromfile.FromFileFragment o-- com.kanzu.flibook.ui.fromfile.FromFileViewModel : fromFileViewModel
  com.kanzu.flibook.ui.fromfile.FromFileViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
